--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -73,7 +73,7 @@ jobs:
 
     - name: Configure EKS access
       run: |
-        aws eks update-kubeconfig --region us-east-1 --name $EKS_CLUSTER
+        aws eks update-kubeconfig --region ap-south-1 --name $EKS_CLUSTER
 
     - name: Create namespace if not exists
       run: |
